# it_workin_test

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  run.sh
app/: auth.py  config.py  constants.py  db.py  main.py  manager.py  models.py  schemas.py  utils.py  views.py
app/chat/: manager.py  schemas.py  utils.py  views.py
app/core/: config.py  constants.py  db.py  models.py
app/templates/: chat.html
app/users/: auth.py  schemas.py  utils.py  views.py
migrations/: env.py
migrations/versions/: 0fbb92e18986_updating_models.py  3c75eb8915ca_7_change_room_model.py  592597d33cea_6_change_room_model.py  5cd2ba17e9ef_4_change_user_model.py  99834f9b59a1_5_add_room_model.py  b25f4808f579_create_models.py  c11b8cbe7510_add_fields_to_user_model.py
